# Bajaj_DOC_Q-A

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  README.md  SETUP.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  WORKFLOW_DIAGRAMS.md  app.py  config.py  document_processor.py  main.py  main_new.py  pyproject.toml  rag_chain.py  requirements.txt  rerank.py  schemas.py  vectorstore_utils.py
