[project]
name = "chodu"
version = "0.1.0"
description = "A project using FastAPI, LangChain, Pinecone, and more"
authors = [
    { name="Kartik"}
]
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "faiss-cpu",
    "pymupdf",
    "python-docx",
    "pydantic",
    "python-dotenv",
    "requests"
]

[tool.uv]
# Optional: uv-specific settings can go here

[build-system]
requires = ["uv"]
build-backend = "uv.build"